# denver-dot

./: .gitignore
.github/: README.md  TODO.md  notes.md  todo.md
etc/: bash.bashrc  machine-info  nanorc  pacman.conf  paru.conf  vconsole.conf
etc/X11/Xresources/: x11-common
etc/X11/Xresources/custom/: fonts
etc/X11/Xresources/custom/colors/: atlantic-black
etc/X11/Xsession.d/: xsession.sh
etc/X11/xinit/: .Xmodmap  xinitrc
etc/X11/xorg.conf.d/: 00-keyboard.conf  00-monitor-general.conf  00-monitor.conf  01-monitor-c17l.conf  02-monitor-t470.conf  10-keyboard.conf  20-pointer-acceleration.conf  30-pointer-sensitivity.conf  40-pointer-preference.conf  60-extensions.conf
etc/bash.bashrc_custom/: bashrc
etc/bash.bashrc_custom/aliases/: completions.sh  general.sh  git.sh
etc/bash.bashrc_custom/enviroment/: profile.sh
etc/default/: keyboard
etc/fish/: config.fish
etc/fish/aliases/: general.fish  git.fish
etc/fish/completions/: dk.fish  glog.fish  repos.fish
etc/fish/conf.d/: aliases.fish  custom.fish  enviroment.fish  fzf.fish
etc/fish/custom/: init.fish  profile.fish
etc/fish/custom/aliases/: general.fish  git.fish  init.fish
etc/fish/custom/completions/: init.fish
etc/fish/custom/conf.d/: fzf.fish
etc/fish/custom/functions/fish/: fish_greeting.fish  greeting.fish
etc/fish/custom/functions/fzf/: cdf.fish  edf.fish  fda.fish  fdd.fish  fdf.fish  ffzf.fish  ffzr.fish  fuba.fish  fzr.fish
etc/fish/custom/functions/git/: gls.fish
etc/fish/custom/functions/misc/: mdprev.fish  venvinit.fish
etc/fish/custom/keybindings/: fish_user_key_bindings.fish  fzf_default_key_bindings.fish  fzf_user_key_bindings.fish  init.fish
etc/fish/functions/: cdf.fish  dsf.fish  edf.fish  fda.fish  fdd.fish  fdf.fish  ffzf.fish  fish_greeting.fish  fish_user_key_bindings.fish  fuba.fish  fzf_key_bindings.fish  fzh.fish  fzr.fish  glog.fish  mdprev.fish  venvact.fish
etc/omf/: bundle
etc/systemd/system/getty@tty1.service.d/: autologin.conf  skip-prompt.conf
home/: .bash_profile  .clang-format  .gitconfig  .gitconfig-codeberg  .gitconfig-gitea  .gitconfig-github  .gitconfig-gitlab  .gitconfig-obsidian  .pylintrc.toml  .style.yapf  .vimrc  .wakatime-internal.cfg  .wakatime-secrets.cfg  .wakatime.cfg  .xinitrc  .xsession  pyproject.toml
home/.config/: mimeapps.list  rofimoji.rc  user-dirs.dirs
home/.config/FreeCAD/: user.cfg
home/.config/Thunar/: uca.xml
home/.config/alacritty/: alacritty.toml
home/.config/alacritty/colorscheme/themes/: atlantic-black.toml  atlantic.toml  ayu_dark.toml  dracula.toml  horizon-dark.toml  nord.toml  omni.toml  one_dark.toml  sisifo.toml  thelovelace.toml  zhxo.toml
home/.config/awesome/: rc.lua
home/.config/awesome/themes/atlantic-black/: theme.lua
home/.config/awesome/widgets/: init.lua
home/.config/awesome/widgets/ffretray/: init.lua
home/.config/awesome/widgets/pavol/: init.lua
home/.config/awesome/widgets/spotify_bar/: README.md  init.lua
home/.config/awesome/widgets/whoip/: init.lua
home/.config/awesome/widgets/xkb_indicator/: init.lua
home/.config/bat/: config
home/.config/bpython/: config
home/.config/btop/: btop.conf
home/.config/codium/User/: keybindings.json  settings.json
home/.config/fish/conf.d/: omf.fish
home/.config/gh/: config.yml
home/.config/gtk-3.0/: settings.ini
home/.config/htop/: htoprc
home/.config/i3/: config  modes
home/.config/i3status/: config
home/.config/micro/: .plug_available  .plug_installed  .plug_not_installed  bindings.json  settings.json
home/.config/micro/plug/lsp/: main.lua
home/.config/qalculate/: qalc.cfg
home/.config/rofi/: config.rasi
home/.config/rofi/themes/atlantic-black/: config.rasi  theme.rasi
home/.config/rofi/themes/minimal/: config.rasi  theme.rasi
home/.config/spicetify/: config-xpui.ini
home/.config/spicetify/Themes/Text/: user.css
home/.config/sublime-text/Installed Packages/: Color Highlighter.sublime-package  Discord Rich Presence.sublime-package  EditorConfig.sublime-package  Git.sublime-package  Json Colors And Navigation.sublime-package  LSP-pylsp.sublime-package  MarkdownPreview.sublime-package  TOML.sublime-package  Theme - Freesia.sublime-package  WakaTime.sublime-package
home/.config/tumbler/: tumbler.rc
home/.config/vim/: vimrc
home/.config/wip.awesome/: .editorconfig  rc.lua
home/.config/wip.awesome/themes/1c5c4bc5/: theme.lua
home/.config/wip.awesome/themes/a155aacf/: theme.lua
home/.config/wip.awesome/widgets/: init.lua
home/.config/wip.awesome/widgets/whoip/: init.lua
home/.config/wip.awesome/widgets/xkb_indicator/: init.lua  luac.out
home/.config/zathura/: zathurarc
home/.config/zathura/preferences/: bindings
home/.config/zathura/themes/: atlantic-black
home/.gnupg/: gpgsm.conf
home/.librewolf/: librewolf.overrides.cfg
home/.local/share/FreeCAD/Gui/Stylesheets/: Atlantic-Mono.qss
misc/: vscode-minimal.json
sublime-text/Installed Packages/: GitGutter.sublime-package  LSP.sublime-package  LanguagePortuguese.sublime-package  Package Control.sublime-package  Python 3.sublime-package  SideBarEnhancements.sublime-package  Terminus.sublime-package
